# Allium

./: .env.example  .gitignore  .gitmodules  Cargo.toml  GAMESWITCHER_EVALUATION.md  GAMESWITCHER_INTEGRATED.md  GAME_SWITCHER_IMPLEMENTATION.md  LICENSE  Makefile  POC_QUICKSTART.md  README.md  cross.nix  deny.toml  deploy-to-sd.sh  devenv.nix  local.mk.example
.github/workflows/: allium.yml
crates/activity-tracker/: Cargo.toml
crates/activity-tracker/src/: main.rs
crates/activity-tracker/src/view/: activity_tracker.rs  app.rs
crates/allium-launcher/: Cargo.toml
crates/allium-launcher/src/: allium_launcher.rs  consoles.rs  main.rs
crates/allium-launcher/src/entry/: directory.rs  game.rs  gamelist.rs  lazy_image.rs
crates/allium-launcher/src/view/: app.rs  entry_list.rs  games.rs  mod.rs  recents.rs  recents_carousel.rs  recents_list.rs  search_results.rs  toast.rs
crates/allium-launcher/src/view/recents/: mod.rs  recents_carousel.rs  recents_list.rs
crates/allium-launcher/src/view/settings/: about.rs  clock.rs  display.rs  language.rs  power.rs  theme.rs  wifi.rs
crates/allium-menu/: Cargo.toml
crates/allium-menu/src/: allium_menu.rs  main.rs
crates/allium-menu/src/view/: game_switcher.rs  ingame_menu.rs  mod.rs  text_reader.rs
crates/alliumd/: Cargo.toml
crates/alliumd/src/: alliumd.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: command.rs  constants.rs  database.rs  game_history.rs  game_info.rs  lib.rs  locale.rs  power.rs  stylesheet.rs  wifi.rs
crates/common/src/display/: color.rs  font.rs  settings.rs
crates/common/src/platform/: mock.rs  mod.rs  simulator.rs
crates/common/src/platform/miyoo/: evdev.rs  framebuffer.rs  mod.rs
crates/common/src/platform/miyoo/battery/: miyoo283.rs
crates/common/src/view/: battery_indicator.rs  button_icon.rs  clock.rs  image.rs  label.rs  list.rs  mod.rs  row.rs  scroll_list.rs  search.rs  settings_list.rs
crates/common/src/view/input/: color_picker.rs  datetime.rs  keyboard.rs  number.rs  text_box.rs  toggle.rs
crates/ffi/: Cargo.toml  build.rs
crates/game-switcher/: Cargo.toml  README.md  test.sh
crates/game-switcher/src/: main.rs
crates/myctl/: Cargo.toml
crates/myctl/src/: main.rs  volume.rs
crates/say/: Cargo.toml
crates/say/src/: main.rs
crates/screenshot/: Cargo.toml
crates/screenshot/src/: main.rs
crates/show/: Cargo.toml
crates/show-hotkeys/: Cargo.toml
crates/show-hotkeys/src/: main.rs
crates/show/src/: main.rs
static/.allium/config/: cores.toml
static/.allium/cores/drastic/: launch.sh
static/.allium/locales/de-DE/: main.ftl
static/.allium/locales/en-GB/: main.ftl
static/.allium/locales/en-US/: main.ftl
static/.allium/locales/es-CO/: main.ftl
static/.allium/locales/es-ES/: main.ftl
static/.allium/locales/fr-FR/: main.ftl
static/.allium/locales/id-ID/: main.ftl
static/.allium/locales/it-IT/: main.ftl
static/.allium/locales/ja-JP/: main.ftl
static/.allium/locales/ro-RO/: main.ftl
static/.allium/locales/zh-CN/: main.ftl
static/.allium/locales/zh-HK/: main.ftl
static/.allium/locales/zh-TW/: main.ftl
static/.allium/migrations/0002-move-screenshots/: name.txt  run.sh
static/.allium/scripts/: syncthing-off.sh  syncthing-on.sh
static/.tmp_update/: updater
