[package]
name = "allium-menu"
version = "0.27.0"
edition = "2024"
include = ["/src"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simulator = ["common/simulator"]
miyoo = ["common/miyoo"]

[dependencies]
anyhow.workspace = true
embedded-graphics.workspace = true
lazy_static.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
strum = { workspace = true, features = ["derive"] }
async-trait.workspace = true
type-map.workspace = true
simple_logger = { workspace = true, default-features = false }
log = { workspace = true, features = ["release_max_level_info"] }
sha2.workspace = true
base32.workspace = true

[dependencies.common]
path = "../common"
