[package]
name = "alliumd"
version = "0.27.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simulator = ["common/simulator"]
miyoo = ["common/miyoo"]
console = ["console-subscriber"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
console-subscriber = { workspace = true, optional = true }
enum-map.workspace = true
lazy_static.workspace = true
log = { workspace = true, features = ["release_max_level_info"] }
nix = { workspace = true, features = ["signal", "process"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
simple_logger = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["full"] }

[dependencies.common]
path = "../common"
