[package]
name = "game-switcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
framebuffer = "0.3"
embedded-graphics = "0.8"
chrono = "0.4"

common = { path = "../common" }

[[bin]]
name = "game-switcher"
path = "src/main.rs"
