[package]
name = "myctl"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
ffi = { version = "0.1.0", path = "../ffi" }
log.workspace = true
simple_logger = { workspace = true, default-features = false }
