[package]
name = "say"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
embedded-graphics.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
clap = { workspace = true, features = ["derive"] }
