[package]
name = "screenshot"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
framebuffer.workspace = true
image = { workspace = true, default-features = false, features = ["png"] }
sysfs_gpio.workspace = true
log.workspace = true
