[package]
name = "show-hotkeys"
version = "0.1.0"
edition = "2024"
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simulator = ["common/simulator"]
miyoo = ["common/miyoo"]

[dependencies]
anyhow.workspace = true
embedded-graphics.workspace = true
lazy_static.workspace = true
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
type-map.workspace = true
simple_logger = { workspace = true, default-features = false }
log = { workspace = true, features = ["release_max_level_info"] }

[dependencies.common]
path = "../common"
