[package]
name = "show"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
framebuffer.workspace = true
image = { workspace = true, default-features = false, features = ["png", "jpeg", "gif"] }
common = { path = "../common" }
